--- a/src/style.scss
+++ b/src/style.scss
@@ -12,7 +12,43 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
   font-family: "Bellefair", serif;
   background-color: $bg-color;
   color: $white-accent;
+}
+
+.bg-wrapper {
+  width: 100%;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+
+
+
+  .ratio {
+    position: relative;
+    display: block;
+
+    &:before {
+      content: "";
+      display: block;
+      width: 100%;
+      padding-bottom: 48.25%;
+      background-color: red;
+    }
+
+    &__img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.nav-container {
+  position: relative;
 }
