--- a/src/style.scss
+++ b/src/style.scss
@@ -24,16 +24,18 @@ body {
   display: block;
   justify-content: center;
   align-items: center;
-  position: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
 
   // cover the bg-image
   .ratio_cover {
-    position: fixed;
-    z-index: 10;
+    position: absolute;
+    z-index: 5;
     width: 100%;
-    height: 100vh;
+    // height: 100vh;
     background-color: red;
-    opacity: 0
+    opacity: 0;
   }
   // -------------- bg-image ----------------- //
   .ratio {
@@ -59,6 +61,9 @@ body {
   // -------------- bg-image ----------------- //
 }
 
-.nav-container {
+.nav_container {
+  margin: 0;
+  background-color: $white-accent-4;
   position: relative;
+  z-index: 10;
 }
